<resources>
    <string name="header">Size Book</string>
    <string name="app_name">jkc1-SizeBook</string>

    <string name="add">Add</string>

    <string name="Name">Name: </string>
    <string name="Date">Date: </string>
    <string name="Neck">Neck: </string>
    <string name="Bust">Bust: </string>
    <string name="Chest">Chest: </string>
    <string name="Waist">Waist: </string>
    <string name="Hip">Hip: </string>
    <string name="Inseam">Inseam: </string>
    <string name="Comment">Comment: </string>

    <string name="EditDone">Done Editing</string>
    <string name="Delete">Delete</string>
    <string name="SaveRecord">Save Record</string>
    <string name="Edit">Edit</string>

    <string name = "Count">Number of Records:</string>


</resources>
